docs and etc. that they belong together.

    FrameManager -->       AuiManager
    FrameManagerEvent -->  AuiManagerEvent
    PaneInfo -->           AuiPaneInfo
    FloatingPane -->       AuiFloatingPane
    DockArt -->            AuiDockArt
    TabArt -->             AuiTabArt
    AuiMultiNotebook -->   AuiNotebook
    AuiNotebookEvent -->   AuiNotebookEvent
       





2.7.1.3
-------
* 26-Oct-2006

wxGTK:  The wx.ALWAYS_SHOW_SB style is now supported.

Fixed name errors in the old wxPython package namespace.  As a
reminder, use of this package is deprecated and you are encouraged to
switch your programs over to the wx package.

Fixed wx.glcanvas.GLCanvas.SetCurrent to be compatible with prevoius
versons. 

Added wx.StandardPaths.GetTmpDir.

Bug fixes in the wx.ListCtrl on Mac from Kevin Olivier, allowing it to
send events properly again.  There is also a new native implementation
of wx.ListCtrl available, which will be used for wx.LC_REPORT style
list controls if you set the "mac.listctrl.always_use_generic"
SystemOption to zero.  In a future release this will be the default.

Added a sample to the demo that shows some of what can be done with
the new wx.GraphicsContext and wx.GraphicsPath classes.




2.7.1.2
-------
* 21-Oct-2006

Fixed a bug in the MaskedEdit controls caused by conflicting IsEmpty
methods. 

Patch #1579280: Some mimetype optimizations on unix-like systems.

wxMac: Several wx.webkit.WebKitCtrl enhancements/fixes, including:

    - new methods for increasing/decreasing text size, getting
      selection, getting/setting scroll position, printing, enabling
      editing, and running JavaScripts on the page.

    - added new event (wx.webkit.WebKitBeforeLoadEvent) for catching, and
      possibly vetoing, load events before they occur.

    - wx.webkit.WebKitCtrl now fires mouse events for certain events
      that it was eating before. This improves wxSplitterWindow
      resizing behavior.
